# spmt

./: .gitignore  README.md  eval_harness.py  main.py  pyproject.toml
config/: table_mappings.json
scripts/: bootstrap_and_test.sh  llm_batch_convert.py  llm_batch_convert_gpt.py  llm_conversion_prompt.md
spmt/: __main__.py  cli.py  converter.py  documenter.py  ktr_generator.py  parser.py  rules.py  table_mapper.py  test_converter.py  test_parser.py  test_rules.py  test_table_mapper.py  test_variable_handler.py  variable_handler.py  variable_mappings.json
tests/: test_converter.py  test_ktr_generator.py  test_parser.py  test_rules.py  test_variable_handler.py
tests/fixtures/: TC-01_basic_nulls_strings_unions.sas  TC-02_date_functions_choosec_lookups.sas  TC-03_case_when_date_arithmetic_operators.sas  TC-04_quarterly_contracts_right_joins.sas  TC-05_format_lookups_aggregation.sas  TC-06_put_formats_time_slices.sas  TC-07_chained_tables_calculated_having.sas  TC-08_linkages_contains_multijoin.sas  TC-09_select_into_macro_coalesce_not_exists.sas  TC-10_string_functions_cats_tranwrd_index_scan.sas  TC-11_date_extraction_intck_datepart_qtr.sas  TC-12_set_ops_monotonic_outobs_self_join.sas  TC-13_full_pattern_coverage.sas  TC-14_contract_customer_multijoin_fullpatterns.sas  TC-15_cashflow_multipattern.sas  TC-16_regulatory_approval_reporting.sas  TC-17_transactions_yrdif_roundfmt_outerunion.sas  TC-18_insurance_additions_exits_quarterly.sas  TC-19_quarterly_audit_pivot_transpose.sas  TC-20_window_rank_retain_lag_update.sas  TC-21_regex_compress_verify_propcase.sas  (+14 more)
