[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spmt"
version = "0.1.0"
description = "Rule-based SAS PROC SQL to Oracle SQL converter for Pentaho"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.28",
  "openai>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
spmt = "spmt.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spmt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
